# till-bot

./: .gitignore.backup  README.md  main.py  pyproject.toml
bots/mycelium_bot/: main.py  main.py.backup  nixpacks.toml  requirements.txt  view_mycelium.py
bots/tree_bot/: assets_checkin.py  config.py  dapple_till.py  dapple_till.py.backup  financial_chat.py  financial_summary_generator.py  goldenretriever_chat.py  main.py  main2.py  view_assets.py
data/: .gitignore
